Add more flex containers and img src

--- a/index.html
+++ b/index.html
@@ -8,29 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <div class="hero">
-        <div class="header-logo">
-            Header Logo
-        </div>
-        <div class="header-links">
-            <ul>
-                <li>Header link one</li>
-                <li>Header link two</li>
-                <li>Header link three</li>
-            </ul>
+        <div class="header">
+            <div class="header-logo">
+                Header Logo
+            </div>
+            <div class="header-links">
+                <ul>
+                    <li>Header link one</li>
+                    <li>Header link two</li>
+                    <li>Header link three</li>
+                </ul>
+            </div>
         </div>
         <div class="hero-contents">
             <div class="hero-text">
                 <div class="hero-text-title">This Website Is Awesome!</div>
                 <div class="hero-text-main">This is the place for the text that is normal size, below the big text and above the button. That is all?</div>
-                <div class="hero-text-button">
-                    <button>
-                        Sign Up
-                    </button>
-                </div>
+                <button class="hero-text-button">Sign Up</button>
             </div>
             <div class="hero-img">
-
+                <img src="./img/hero.jpeg" alt="sample image near top of the page" class="hero-sample">
             </div>
 
         </div>
@@ -54,7 +53,7 @@
             </div>
         </div>
         <div class="quote-panel">
-            <div class="quote">This is a quote done by somebody. I'm not sure what it will say in the future but for now it's this.</div>
+            <div class="quote"><i>This is a quote done by somebody. I'm not sure what it will say in the future but for now it's this.</i></div>
             <div class="quote-name">-Gavin Sutton, website creator</div>
         </div>
         <div class="sign-up-panel">
@@ -63,9 +62,7 @@
                     <div class="modal-header">Call to action! it's time!</div>
                     <div class="modal-text">Join us by clicking this Sign Up button!</div>
                 </div>
-                <div class="modal-button">
-                    <button>Sign Up</button>
-                </div>
+                <button class="modal-button">Sign Up</button>
             </div>
 
         </div>
