--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <div class="hero">
         <div class="header">
             <div class="header-logo">
@@ -50,6 +49,10 @@
                     <img src="" alt="">
                     <div class="card-text">This is text about the above image</div>
                 </div>
+                <div class="card">
+                    <img src="" alt="">
+                    <div class="card-text">This is text about the above image</div>
+                </div>
             </div>
         </div>
         <div class="quote-panel">
@@ -70,6 +73,5 @@
     <div class="footer">
         Copyright ©️ The Odin Project 2022
     </div>
-    
 </body>
 </html>
