Add img src for cards

--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
             <div class="img-panel-title">Some Random Information</div>
             <div class="img-panel-main">
                 <div class="card">
-                    <img src="" alt="">
+                    <img src="./img/card1.jpg" alt="">
                     <div class="card-text">This is text about the above image</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <img src="./img/card2.jpg" alt="">
                     <div class="card-text">This is text about the above image</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <img src="./img/card3.jpg" alt="">
                     <div class="card-text">This is text about the above image</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <img src="./img/card4.jpg" alt="">
                     <div class="card-text">This is text about the above image</div>
                 </div>
             </div>
         </div>
         <div class="quote-panel">
-            <div class="quote"><i>This is a quote done by somebody. I'm not sure what it will say in the future but for now it's this.</i></div>
+            <div class="quote"><i>This is a quote done by somebody. I'm not sure what it will say in the future but for now it's this. Let's make this a little bit longer for testing purposes.</i></div>
             <div class="quote-name">-Gavin Sutton, website creator</div>
         </div>
         <div class="sign-up-panel">
