Change from placeholder to personalized

--- a/index.html
+++ b/index.html
@@ -11,67 +11,67 @@
     <div class="hero">
         <div class="header">
             <div class="header-logo">
-                Header Logo
+                Hi, my name is
             </div>
             <div class="header-links">
                 <ul>
-                    <li>Header link one</li>
-                    <li>Header link two</li>
-                    <li>Header link three</li>
+                    <li><u>Home</u></li>
+                    <li><u>About</u></li>
+                    <li><u>Contact</u></li>
                 </ul>
             </div>
         </div>
         <div class="hero-contents">
             <div class="hero-text">
-                <div class="hero-text-title">This Website Is Awesome!</div>
-                <div class="hero-text-main">This is the place for the text that is normal size, below the big text and above the button. That is all?</div>
-                <button class="hero-text-button">Sign Up</button>
+                <div class="hero-text-title">Gavin <br> Sutton</div>
+                <div class="hero-text-main">Web Developer based in Miyagi, Japan.</div>
+                <button class="hero-text-button">See More</button>
             </div>
             <div class="hero-img">
-                <img src="./img/hero.jpeg" alt="sample image near top of the page" class="hero-sample">
+                <img src="./img/self-zoomed.jpg" alt="sample image near top of the page" class="hero-sample">
             </div>
 
         </div>
     </div>
     <div class="main">
         <div class="img-panel">
-            <div class="img-panel-title">Some Random Information</div>
+            <div class="img-panel-title">My Work</div>
             <div class="img-panel-main">
                 <div class="card">
-                    <img src="./img/card1.jpg" alt="">
-                    <div class="card-text">This is text about the above image</div>
+                    <img src="./img/rps.jpg" alt="">
+                    <div class="card-text">Rock Paper Scissors</div>
                 </div>
                 <div class="card">
-                    <img src="./img/card2.jpg" alt="">
-                    <div class="card-text">This is text about the above image</div>
+                    <img src="./img/calculator.jpg" alt="">
+                    <div class="card-text">Calculator</div>
                 </div>
                 <div class="card">
-                    <img src="./img/card3.jpg" alt="">
-                    <div class="card-text">This is text about the above image</div>
+                    <img src="./img/sketch.jpg" alt="">
+                    <div class="card-text">Etch-A-Sketch</div>
                 </div>
                 <div class="card">
-                    <img src="./img/card4.jpg" alt="">
-                    <div class="card-text">This is text about the above image</div>
+                    <img src="./img/question-mark.jpg" alt="">
+                    <div class="card-text">Coming Soon</div>
                 </div>
             </div>
         </div>
         <div class="quote-panel">
-            <div class="quote"><i>This is a quote done by somebody. I'm not sure what it will say in the future but for now it's this. Let's make this a little bit longer for testing purposes.</i></div>
-            <div class="quote-name">-Gavin Sutton, website creator</div>
+            <div class="quote"><i><ul><li>Nationality : Canada</li> <li>Age : 29</li> <li>Home : Miyagi, Japan</li> <li>X : X</li> <li>Favorite Food : Ramen</li></ul></i></div>
+            <!-- <div class="quote-name">-Gavin Sutton, website creator</div> -->
         </div>
         <div class="sign-up-panel">
             <div class="modal">
                 <div class="modal-contents">
-                    <div class="modal-header">Call to action! it's time!</div>
-                    <div class="modal-text">Join us by clicking this Sign Up button!</div>
+                    <div class="modal-header">Interested in working together?</div>
+                    <div class="modal-text">Click for my full resume</div>
                 </div>
-                <button class="modal-button">Sign Up</button>
+                <button class="modal-button">Click Here</button>
             </div>
 
         </div>
     </div>
     <div class="footer">
-        Copyright ©️ The Odin Project 2022
+        Created by Gavin Sutton
     </div>
 </body>
 </html>
