Update quote section layout

--- a/index.html
+++ b/index.html
@@ -46,26 +46,31 @@
                     <div class="card-text">Calculator</div>
                 </div>
                 <div class="card">
-                    <img src="./img/sketch.jpg" alt="">
+                    <img src="./img/img-panel-pen.jpg" alt="">
                     <div class="card-text">Etch-A-Sketch</div>
                 </div>
                 <div class="card">
-                    <img src="./img/question-mark.jpg" alt="">
+                    <img src="./img/under_construction.jpg" alt="">
                     <div class="card-text">Coming Soon</div>
                 </div>
             </div>
         </div>
         <div class="quote-panel">
-            <div class="quote"><i><ul><li>Nationality : Canada</li> <li>Age : 29</li> <li>Home : Miyagi, Japan</li> <li>X : X</li> <li>Favorite Food : Ramen</li></ul></i></div>
+            <div class="quote-panel-title">About Me</div>
+            <div class="quote-container">
+                <div class="quote-left"><ul class="quote-list"><li>Nationality</li><li>Age</li><li>Home</li><li>Favorite Food</li></ul></div>
+                <div class="quote-center"><ul class="quote-list"><li>:</li><li>:</li><li>:</li><li>:</li></ul></div>
+                <div class="quote-right"><ul class="quote-list"><li>Canada</li><li>29</li><li>Miyagi, Japan</li><li>Ramen</li></ul></div>
+            </div>
             <!-- <div class="quote-name">-Gavin Sutton, website creator</div> -->
         </div>
         <div class="sign-up-panel">
             <div class="modal">
                 <div class="modal-contents">
                     <div class="modal-header">Interested in working together?</div>
-                    <div class="modal-text">Click for my full resume</div>
+                    <div class="modal-text">Check out my full resume</div>
                 </div>
-                <button class="modal-button">Click Here</button>
+                <button class="modal-button"><a href="https://github.com/Swarmz/project-landing-page/blob/main/gavin-resume.pdf" target="_blank">Click Here</a></button>
             </div>
 
         </div>
