Update body and background div layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="background">
+    <div class="body-container">
     <div class="hero">
         <div class="header">
             <div class="header-logo">
@@ -78,5 +80,7 @@
     <div class="footer">
         Created by Gavin Sutton
     </div>
+</div>
+</div>
 </body>
 </html>
