--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="header-links">
                 <ul>
-                    <li><u>Home</u></li>
+                    <li><u><a href="https://swarmz.github.io/project-landing-page/">Home</a></u></li>
                     <li><u>About</u></li>
                     <li><u>Contact</u></li>
                 </ul>
@@ -25,7 +25,7 @@
         </div>
         <div class="hero-contents">
             <div class="hero-text">
-                <div class="hero-text-title">Gavin <br> Sutton</div>
+                <div class="hero-text-title"><h1>Gavin <br> Sutton</h1></div>
                 <div class="hero-text-main">Web Developer based in Miyagi, Japan.</div>
                 <button class="hero-text-button">See More</button>
             </div>
@@ -37,7 +37,7 @@
     </div>
     <div class="main">
         <div class="img-panel">
-            <div class="img-panel-title">My Work</div>
+            <div class="img-panel-title"><h2>My Work</h2></div>
             <div class="img-panel-main">
                 <div class="card">
                     <img src="./img/rps.jpg" alt="">
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="quote-panel">
-            <div class="quote-panel-title">About Me</div>
+            <div class="quote-panel-title"><h2>About Me</h2></div>
             <div class="quote-container">
                 <div class="quote-left"><ul class="quote-list"><li>Nationality</li><li>Age</li><li>Home</li><li>Favorite Food</li></ul></div>
                 <div class="quote-center"><ul class="quote-list"><li>:</li><li>:</li><li>:</li><li>:</li></ul></div>
