Add link to about me page in header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="header-links">
                 <ul>
                     <li><u><a href="https://swarmz.github.io/project-landing-page/">Home</a></u></li>
-                    <li><u>About</u></li>
+                    <li><u><a href="https://swarmz.github.io/about/">About</a></u></li>
                     <li><u>Contact</u></li>
                 </ul>
             </div>
