Complete rough draft of layout

--- a/about.html
+++ b/about.html
@@ -18,35 +18,55 @@
                         </div>
                         <div class="header-links">
                         <ul>
-                            <li><u><a href="https://swarmz.github.io/project-landing-page/">Home</a></u></li>
-                            <li><u><a href="https://swarmz.github.io/about/">About</a></u></li>
+                            <li><u><a href="./index.html">Home</a></u></li>
+                            <li><u><a href="./about.html">About</a></u></li>
                             <li><u>Contact</u></li>
                         </ul>
                     </div>
                 </div>
                 <div class="main">
-                   <div class="contents-top">
-                        <div class="contents-title">
-                            <h2>Where I'm From</h2>
-                        </div>
+                    <div class="about-title">
+                        <h1>About Me</h1>
+                    </div>
+                    <div class="contents-title">
+                        <h2>Where I'm From</h2>
+                    </div>
+                    <div class="contents-top">
                         <div class="contents-img">
                             <img src="./img/canada-flag.png" alt="flag of canada">
                         </div>
                         <div class="contents-text">
-                            Born originally in Victoria, BC, Canada. 
+                            Sed vitae lectus ut lorem dictum pretium. Cras pulvinar laoreet mi, et porta est porta et. Donec at arcu porta, viverra mauris imperdiet, eleifend nisl. Quisque eu blandit ipsum, ut molestie diam. Pellentesque eleifend felis quis augue rutrum iaculis. Nunc mollis auctor rutrum. Suspendisse ultricies porta gravida. Suspendisse facilisis urna non magna convallis ultricies. Phasellus pellentesque gravida mollis. Vestibulum a porta massa. Ut commodo mi quis ipsum venenatis vulputate. Pellentesque quis fringilla lacus. Proin et porta ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+
+                            <p>Sed vitae ultricies tortor, eget vestibulum quam. Etiam rutrum vitae nisi in porttitor. Donec nec erat a metus tempor faucibus dapibus quis diam. Vestibulum fringilla, nisi eget pulvinar aliquet, mi enim blandit elit, et scelerisque nulla ex id sem. Phasellus mollis feugiat blandit. Mauris pharetra magna elit, vitae rhoncus odio suscipit eget. Aliquam aliquam vehicula tortor, ac laoreet nisi iaculis eu.</p>
                         </div>
                     </div>
+                    <div class="contents-title">
+                        <h2>Hobbies and Interests</h2>
+                    </div>
                     <div class="contents-bottom">
-                        <div class="contents-title">
-                            <h2>Hobbies and Interests</h2>
-                        </div>
+                        <div class="contents-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tincidunt augue a quam feugiat, sed efficitur sem cursus. Duis venenatis tellus id risus pulvinar, sit amet facilisis leo gravida. Etiam in leo quis nibh molestie faucibus id ac ligula. Quisque efficitur mauris id augue fermentum, et euismod nibh interdum. Duis imperdiet turpis id dolor varius euismod. Integer pulvinar eu augue ut pellentesque. Nam at metus volutpat, scelerisque mi ac, cursus odio. Nulla viverra convallis rutrum. Aliquam pharetra porttitor ex tempus aliquam. Fusce nibh ex, faucibus et elit sed, imperdiet sodales nulla. Curabitur varius consectetur elit eget blandit. Fusce gravida quam vitae sem pellentesque vehicula.
+
+                            <p>Cras sollicitudin dapibus dui, nec consectetur eros ultricies quis. Integer nulla augue, pharetra at eros vitae, rutrum ultricies eros. Nam sed nisi nec orci vestibulum malesuada. Quisque tincidunt tempus eros. Aliquam libero lacus, euismod ac auctor et, vulputate eget augue. In eu velit vitae eros lobortis viverra. Aliquam erat volutpat. </p>
+                        </div> 
                         <div class="contents-img">
                             <img src="./img/hobby.jpg" alt="various hobbies">
-                        </div>
-                        <div class="contents-text">
-                             
-                        </div>  
-                   </div>
+                        </div> 
+                    </div>
+                    <div class="contents-title">
+                        <h2>Example Title</h2>
+                    </div>
+                   <div class="contents-top">
+                    <div class="contents-img">
+                        <img src="./img/card1.jpg" alt="">
+                    </div>
+                    <div class="contents-text">
+                        Sed vitae lectus ut lorem dictum pretium. Cras pulvinar laoreet mi, et porta est porta et. Donec at arcu porta, viverra mauris imperdiet, eleifend nisl. Quisque eu blandit ipsum, ut molestie diam. Pellentesque eleifend felis quis augue rutrum iaculis. Nunc mollis auctor rutrum. Suspendisse ultricies porta gravida. Suspendisse facilisis urna non magna convallis ultricies. Phasellus pellentesque gravida mollis. Vestibulum a porta massa. Ut commodo mi quis ipsum venenatis vulputate. Pellentesque quis fringilla lacus. Proin et porta ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+
+                        <p>Sed vitae ultricies tortor, eget vestibulum quam. Etiam rutrum vitae nisi in porttitor. Donec nec erat a metus tempor faucibus dapibus quis diam. Vestibulum fringilla, nisi eget pulvinar aliquet, mi enim blandit elit, et scelerisque nulla ex id sem. Phasellus mollis feugiat blandit. Mauris pharetra magna elit, vitae rhoncus odio suscipit eget. Aliquam aliquam vehicula tortor, ac laoreet nisi iaculis eu.</p>
+                    </div>
+                </div>
                 </div>
 
     </body>
