Update to test links via local file

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <div class="header-links">
                 <ul>
-                    <li><u><a href="https://swarmz.github.io/project-landing-page/">Home</a></u></li>
-                    <li><u><a href="https://swarmz.github.io/about/">About</a></u></li>
+                    <li><u><a href="./index.html">Home</a></u></li>
+                    <li><u><a href="./about.html">About</a></u></li>
                     <li><u>Contact</u></li>
                 </ul>
             </div>
@@ -27,7 +27,7 @@
             <div class="hero-text">
                 <div class="hero-text-title"><h1>Gavin <br> Sutton</h1></div>
                 <div class="hero-text-main">Web Developer based in Miyagi, Japan.</div>
-                <button class="hero-text-button">See More</button>
+                <button class="hero-text-button"><a href="./about.html">About Me</a></button>
             </div>
             <div class="hero-img">
                 <img src="./img/self-zoomed.jpg" alt="sample image near top of the page" class="hero-sample">
@@ -41,7 +41,7 @@
             <div class="img-panel-main">
                 <div class="card">
                     <img src="./img/rps.jpg" alt="">
-                    <div class="card-text">Rock Paper Scissors</div>
+                    <div class="card-text"><a href="./rock-paper-scissors.html">Rock Paper Scissors</a></div>
                 </div>
                 <div class="card">
                     <img src="./img/calculator.jpg" alt="">
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="quote-panel">
-            <div class="quote-panel-title"><h2>About Me</h2></div>
+            <div class="quote-panel-title"><h2>The Basics</h2></div>
             <div class="quote-container">
                 <div class="quote-left"><ul class="quote-list"><li>Nationality</li><li>Age</li><li>Home</li><li>Favorite Food</li></ul></div>
                 <div class="quote-center"><ul class="quote-list"><li>:</li><li>:</li><li>:</li><li>:</li></ul></div>
@@ -72,7 +72,7 @@
                     <div class="modal-header">Interested in working together?</div>
                     <div class="modal-text">Check out my full resume</div>
                 </div>
-                <button class="modal-button"><a href="https://github.com/Swarmz/project-landing-page/blob/main/document/resume.pdf" target="_blank">Click Here</a></button>
+                <button class="modal-button"><a href="./document/resume.pdf" target="_blank">Click Here</a></button>
             </div>
 
         </div>
