--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="card">
                     <img src="./img/img-panel-pen.jpg" alt="">
-                    <div class="card-text">Etch-A-Sketch</div>
+                    <div class="card-text"><a href="./etchasketch.html">Etch-A-Sketch</a></div>
                 </div>
                 <div class="card">
                     <img src="./img/under_construction.jpg" alt="">
@@ -58,11 +58,11 @@
             </div>
         </div>
         <div class="quote-panel">
-            <div class="quote-panel-title"><h2>The Basics</h2></div>
+            <div class="quote-panel-title"><h2>Basic Info</h2></div>
             <div class="quote-container">
                 <div class="quote-left"><ul class="quote-list"><li>Nationality</li><li>Age</li><li>Home</li><li>Favorite Food</li></ul></div>
                 <div class="quote-center"><ul class="quote-list"><li>:</li><li>:</li><li>:</li><li>:</li></ul></div>
-                <div class="quote-right"><ul class="quote-list"><li>Canada</li><li>29</li><li>Miyagi, Japan</li><li>Ramen</li></ul></div>
+                <div class="quote-right"><ul class="quote-list"><li>Canadian</li><li>30</li><li>Miyagi, Japan</li><li>Ramen</li></ul></div>
             </div>
             <!-- <div class="quote-name">-Gavin Sutton, website creator</div> -->
         </div>
