Update rps class name and page tree order

--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -31,7 +31,7 @@
                     <div class="game-screen">
                         Content goes here
                     </div>
-                    <div class="container">
+                    <div class="rps-container">
                         <button class="rpsSelection" type="button" id="rock">Rock</button>
                         <button class="rpsSelection" type="button" id="paper">Paper</button>
                         <button class="rpsSelection" type="button" id="scissors">Scissors</button>
@@ -121,10 +121,13 @@
                     document.getElementById("scissors").addEventListener("click", function(){ playRound("scissors"); });
 
                     </script>
-    </body>
+
+    
     <div class="footer">
         Created by Gavin Sutton
     </div>
-
+</div>
+</div>
+</body>
     
 </html>
