Add header link to my work section on all pages

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="hero">
         <div class="header">
             <div class="header-logo">
-                Hi, my name is
+                Home Page
             </div>
             <div class="header-links">
                 <ul>
                     <li><u><a href="./index.html">Home</a></u></li>
                     <li><u><a href="./about.html">About</a></u></li>
-                    <li><u>Contact</u></li>
+                    <li><u><a href="#img-panel">Work</a></u></li>
                 </ul>
             </div>
         </div>
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="main">
-        <div class="img-panel">
+        <div id="img-panel">
             <div class="img-panel-title"><h2>My Work</h2></div>
             <div class="img-panel-main">
                 <div class="card">
