--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -20,7 +20,7 @@
                             <ul>
                                 <li><u><a href="./index.html">Home</a></u></li>
                                 <li><u><a href="./about.html">About</a></u></li>
-                                <li><u>Contact</u></li>
+                                <li><u><a href="./index.html#img-panel">Work</a></u></li>
                             </ul>
                         </div>
                     </div>
