--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                         <ul>
                             <li><u><a href="./index.html">Home</a></u></li>
                             <li><u><a href="./about.html">About</a></u></li>
-                            <li><u>Contact</u></li>
+                            <li><u><a href="./index.html#img-panel">Work</a></u></li>
                         </ul>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                     </div>
                     <div class="contents-top">
                         <div class="contents-img">
-                            <img src="./img/canada-flag.png" alt="flag of canada">
+                            <img class="about-img" src="./img/canada-flag.png" alt="flag of canada">
                         </div>
                         <div class="contents-text">
                             Sed vitae lectus ut lorem dictum pretium. Cras pulvinar laoreet mi, et porta est porta et. Donec at arcu porta, viverra mauris imperdiet, eleifend nisl. Quisque eu blandit ipsum, ut molestie diam. Pellentesque eleifend felis quis augue rutrum iaculis. Nunc mollis auctor rutrum. Suspendisse ultricies porta gravida. Suspendisse facilisis urna non magna convallis ultricies. Phasellus pellentesque gravida mollis. Vestibulum a porta massa. Ut commodo mi quis ipsum venenatis vulputate. Pellentesque quis fringilla lacus. Proin et porta ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
@@ -51,7 +51,7 @@
                             <p>Cras sollicitudin dapibus dui, nec consectetur eros ultricies quis. Integer nulla augue, pharetra at eros vitae, rutrum ultricies eros. Nam sed nisi nec orci vestibulum malesuada. Quisque tincidunt tempus eros. Aliquam libero lacus, euismod ac auctor et, vulputate eget augue. In eu velit vitae eros lobortis viverra. Aliquam erat volutpat. </p>
                         </div> 
                         <div class="contents-img">
-                            <img src="./img/hobby.jpg" alt="various hobbies">
+                            <img class="about-img" src="./img/hobby.jpg" alt="various hobbies">
                         </div> 
                     </div>
                     <div class="contents-title">
@@ -59,7 +59,7 @@
                     </div>
                    <div class="contents-top">
                     <div class="contents-img">
-                        <img src="./img/card1.jpg" alt="">
+                        <img class="about-img" src="./img/card1.jpg" alt="">
                     </div>
                     <div class="contents-text">
                         Sed vitae lectus ut lorem dictum pretium. Cras pulvinar laoreet mi, et porta est porta et. Donec at arcu porta, viverra mauris imperdiet, eleifend nisl. Quisque eu blandit ipsum, ut molestie diam. Pellentesque eleifend felis quis augue rutrum iaculis. Nunc mollis auctor rutrum. Suspendisse ultricies porta gravida. Suspendisse facilisis urna non magna convallis ultricies. Phasellus pellentesque gravida mollis. Vestibulum a porta massa. Ut commodo mi quis ipsum venenatis vulputate. Pellentesque quis fringilla lacus. Proin et porta ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
