--- a/etchasketch.html
+++ b/etchasketch.html
@@ -19,7 +19,7 @@
                             <ul>
                                 <li><u><a href="./index.html">Home</a></u></li>
                                 <li><u><a href="./about.html">About</a></u></li>
-                                <li><u>Contact</u></li>
+                                <li><u><a href="./index.html#img-panel">Work</a></u></li>
                             </ul>
                         </div>
                     </div>
