--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><u><a href="./index.html">Home</a></u></li>
                     <li><u><a href="./about.html">About</a></u></li>
                     <li><u><a href="#img-panel">Work</a></u></li>
+                    <li id="myEmail" onclick="emailReveal()"><u>Email</u></li>
                 </ul>
             </div>
         </div>
@@ -82,5 +83,15 @@
     </div>
 </div>
 </div>
+<script>
+    function emailReveal() {
+        const x = document.getElementById("myEmail");
+        if (x.innerHTML === "Email") {
+            x.innerHTML = "gavinsutton6511@gmail.com";
+        } else {
+            x.innerHTML = "gavinsutton6511@gmail.com";
+        }
+    }
+</script>
 </body>
 </html>
