Update about page to first iteration of new layout

--- a/about.html
+++ b/about.html
@@ -2,10 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>About</title>
-        <link rel="stylesheet" href="style.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+        <link href='https://css.gg/copy.css' rel='stylesheet'>
     </head>
 
     <body>
@@ -13,26 +16,38 @@
             <div class="body-container">
                 <div class="hero">
                     <div class="header">
-                        <div class="header-logo">
-                            About
-                        </div>
                         <div class="header-links">
-                        <ul>
-                            <li><u><a href="./index.html">Home</a></u></li>
-                            <li><u><a href="./about.html">About</a></u></li>
-                            <li><u><a href="./index.html#img-panel">Work</a></u></li>
-                        </ul>
+                                <a class="a-header" href="./index.html">Home</a>
+                                <a class="a-header" href="./about.html">About</a>
+                                <a class="a-header" href="./index.html#img-panel">Work</a>
+                                <a class="a-header" href="./document/resume.pdf" target="_blank">Resumé</a>
+                        </div>
                     </div>
                 </div>
                 <div class="main">
-                    <div class="about-title">
+                    <div class="main-title">
                         <h1>About Me</h1>
                     </div>
-                    <div class="contents-title">
-                        <h2>Where I'm From</h2>
+                    <div class="about-nav">
+                        <div class="about-title">
+                            <h2>Where I'm From</h2>
+                            <img class="about-img" src="./img/canada-flag-circle.png" alt="flag of canada">
+                        </div>
+                        <div class="about-title">
+                            <h2>Hobbies and Interests</h2>
+                            <img class="about-img" src="./img/hobby-circle.png" alt="various hobbies">
+                        </div>
+                        <div class="about-title">
+                            <h2>Example Title</h2>
+                            <img class="about-img" src="./img/card1.jpg" alt="">
+                        </div>
                     </div>
-                    <div class="contents-top">
-                        <div class="contents-img">
+                    <div class="about-text">
+
+                    </div>
+
+                    <!-- <div class="contents-top">
+                        <div class="about-img">
                             <img class="about-img" src="./img/canada-flag.png" alt="flag of canada">
                         </div>
                         <div class="contents-text">
@@ -50,27 +65,37 @@
 
                             <p>Cras sollicitudin dapibus dui, nec consectetur eros ultricies quis. Integer nulla augue, pharetra at eros vitae, rutrum ultricies eros. Nam sed nisi nec orci vestibulum malesuada. Quisque tincidunt tempus eros. Aliquam libero lacus, euismod ac auctor et, vulputate eget augue. In eu velit vitae eros lobortis viverra. Aliquam erat volutpat. </p>
                         </div> 
-                        <div class="contents-img">
+                        <div class="about-img">
                             <img class="about-img" src="./img/hobby.jpg" alt="various hobbies">
                         </div> 
                     </div>
                     <div class="contents-title">
                         <h2>Example Title</h2>
                     </div>
-                   <div class="contents-top">
-                    <div class="contents-img">
-                        <img class="about-img" src="./img/card1.jpg" alt="">
-                    </div>
-                    <div class="contents-text">
-                        Sed vitae lectus ut lorem dictum pretium. Cras pulvinar laoreet mi, et porta est porta et. Donec at arcu porta, viverra mauris imperdiet, eleifend nisl. Quisque eu blandit ipsum, ut molestie diam. Pellentesque eleifend felis quis augue rutrum iaculis. Nunc mollis auctor rutrum. Suspendisse ultricies porta gravida. Suspendisse facilisis urna non magna convallis ultricies. Phasellus pellentesque gravida mollis. Vestibulum a porta massa. Ut commodo mi quis ipsum venenatis vulputate. Pellentesque quis fringilla lacus. Proin et porta ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                    <div class="contents-top">
+                        <div class="about-img">
+                            <img class="about-img" src="./img/card1.jpg" alt="">
+                        </div>
+                        <div class="contents-text">
+                            Sed vitae lectus ut lorem dictum pretium. Cras pulvinar laoreet mi, et porta est porta et. Donec at arcu porta, viverra mauris imperdiet, eleifend nisl. Quisque eu blandit ipsum, ut molestie diam. Pellentesque eleifend felis quis augue rutrum iaculis. Nunc mollis auctor rutrum. Suspendisse ultricies porta gravida. Suspendisse facilisis urna non magna convallis ultricies. Phasellus pellentesque gravida mollis. Vestibulum a porta massa. Ut commodo mi quis ipsum venenatis vulputate. Pellentesque quis fringilla lacus. Proin et porta ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
 
-                        <p>Sed vitae ultricies tortor, eget vestibulum quam. Etiam rutrum vitae nisi in porttitor. Donec nec erat a metus tempor faucibus dapibus quis diam. Vestibulum fringilla, nisi eget pulvinar aliquet, mi enim blandit elit, et scelerisque nulla ex id sem. Phasellus mollis feugiat blandit. Mauris pharetra magna elit, vitae rhoncus odio suscipit eget. Aliquam aliquam vehicula tortor, ac laoreet nisi iaculis eu.</p>
-                    </div>
+                            <p>Sed vitae ultricies tortor, eget vestibulum quam. Etiam rutrum vitae nisi in porttitor. Donec nec erat a metus tempor faucibus dapibus quis diam. Vestibulum fringilla, nisi eget pulvinar aliquet, mi enim blandit elit, et scelerisque nulla ex id sem. Phasellus mollis feugiat blandit. Mauris pharetra magna elit, vitae rhoncus odio suscipit eget. Aliquam aliquam vehicula tortor, ac laoreet nisi iaculis eu.</p>
+                        </div>
+                    </div> -->
                 </div>
+                <div class="footer">
+                    Created by Gavin Sutton
                 </div>
-
+            </div>
+        </div>
     </body>
-    <div class="footer">
-        Created by Gavin Sutton
-    </div>
+
+    <script>
+    document.querySelectorAll('.a-header').forEach
+    (link => {
+        if(link.href === window.location.href){
+            link.setAttribute('aria-current', 'page')
+        }
+    })
+    </script>
 </html>
